<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">魔方還原助手</string>
    <string name="action_settings">Settings</string>
    <string name="ly02tv01">History</string>
    <string name="ly02bt01">回首頁</string>
    <string name="ly04tv01">按以下的圖片可以選要改的顏色編號</string>
    <string name="ly04bt01">重拍按我</string>
    <string name="ly04bt02">拍下一張</string>
    <string name="ly04bt03">要解了喔</string>
    <string name="tryAgain">重拍按我</string>
    <string name="nextFace">拍下一張</string>
    <string name="front1">正面</string>
    <string name="left1">左面</string>
    <string name="back1">背面</string>
    <string name="right1">右面</string>
    <string name="up1">上面</string>
    <string name="down1">下面</string>
    <string name="solveCube">開始解題</string>
     <string name="invalidCube">發生錯誤</string>
    <string name="invalidCubeLess">您所拍攝的顏色種類小於六 煩請重拍</string>
    <string name="invalidCubenMore">您所拍攝的顏色種類大於六 煩請重拍</string>
    <string name="goHome">回首頁</string>
    <string name="history">歷史紀錄</string>
    <string name="AboutTitle">關於魔方破解助手</string>
    <string name="Version">版本：1.0</string>
    <string name="aboutV1">特別感謝原作者：</string>
    <string name="aboutV11">DroidTools: </string>
    <string name="aboutV12">droidtools@gmail.com</string>
    <string name="aboutV2">Native C Solver by Eric Dietz: </string>
    <string name="aboutV21">http://www.wrongway.org</string>
    <string name="aboutV3">Animated Cube by Josef Jelinek</string>
    <string name="aboutV31">http://software.rubikscube.info/AnimCube/</string>
    <string name="aboutV4">Source Code available at:https:</string>
    <string name="aboutV41">https://github.com/nemothekid/Android-Rubik-s-Cube-Solver</string>
    <string name="Sure">確定</string>
    <string name="remind">請確保九宮內的顏色編號正確 左列顏色數量不能大於6</string>
    <string name="makesure">確定離開魔方還原助手?</string>
    <string name="No">否</string>
    <string name="NowPageF">拍完正面了，請往左翻拍下一張</string>
    <string name="NowPageR">拍完右面了，請往左翻拍下一張</string>
    <string name="NowPageB">拍完背面了，請往左翻拍下一張</string>
    <string name="NowPageL">拍完左面了，請往左翻回正面後拍上面</string>
    <string name="NowPageU">拍完上面了，請往外(前)翻至下面拍照</string>
    <string name="delsolution">刪除本筆紀錄</string>

</resources>