<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Version"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutV1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutV1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/aboutV11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutV11"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutV12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutV12"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/aboutV2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutV2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutV21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutV21"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/aboutV3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutV3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutV31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutV31"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/aboutV4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutV4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutV41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutV41"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/purple" />

        <Button
            android:id="@+id/ly03btngoHome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Sure" />
    </LinearLayout>

</ScrollView>